# project3

./: .gitignore  pyproject.toml
project3/: .gitignore  main.py  utils.py
src/: main.py  operations.py  utils.py
tests/: conftest.py  test_utils.py
