[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Konstantin Maurin <artsjesus7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.1"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
